ch09fileformats/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> system
Rule 1     system -> equation
Rule 2     system -> system TEXNEWLINE NEWLINE equation
Rule 3     equation -> side ARROW side
Rule 4     side -> molecules
Rule 5     molecules -> molecule
Rule 6     molecules -> NUMBER molecule
Rule 7     side -> side PLUS molecules
Rule 8     molecule -> countedelement
Rule 9     countedelement -> ELEMENT
Rule 10    countedelement -> ELEMENT atomcount
Rule 11    molecule -> molecule countedelement
Rule 12    atomcount -> SUBSCRIPT NUMBER
Rule 13    atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE

Terminals, with rules where they appear

ARROW                : 3
ELEMENT              : 9 10
LBRACE               : 13
NEWLINE              : 2
NUMBER               : 6 12 13
PLUS                 : 7
RBRACE               : 13
SUBSCRIPT            : 12 13
TEXNEWLINE           : 2
error                : 

Nonterminals, with rules where they appear

atomcount            : 10
countedelement       : 8 11
equation             : 1 2
molecule             : 5 6 11
molecules            : 4 7
side                 : 3 3 7
system               : 2 0

Parsing method: LALR

state 0

    (0) S' -> . system
    (1) system -> . equation
    (2) system -> . system TEXNEWLINE NEWLINE equation
    (3) equation -> . side ARROW side
    (4) side -> . molecules
    (7) side -> . side PLUS molecules
    (5) molecules -> . molecule
    (6) molecules -> . NUMBER molecule
    (8) molecule -> . countedelement
    (11) molecule -> . molecule countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    NUMBER          shift and go to state 6
    ELEMENT         shift and go to state 8

    system                         shift and go to state 1
    equation                       shift and go to state 2
    side                           shift and go to state 3
    molecules                      shift and go to state 4
    molecule                       shift and go to state 5
    countedelement                 shift and go to state 7

state 1

    (0) S' -> system .
    (2) system -> system . TEXNEWLINE NEWLINE equation

    TEXNEWLINE      shift and go to state 9


state 2

    (1) system -> equation .

    TEXNEWLINE      reduce using rule 1 (system -> equation .)
    $end            reduce using rule 1 (system -> equation .)


state 3

    (3) equation -> side . ARROW side
    (7) side -> side . PLUS molecules

    ARROW           shift and go to state 10
    PLUS            shift and go to state 11


state 4

    (4) side -> molecules .

    ARROW           reduce using rule 4 (side -> molecules .)
    PLUS            reduce using rule 4 (side -> molecules .)
    TEXNEWLINE      reduce using rule 4 (side -> molecules .)
    $end            reduce using rule 4 (side -> molecules .)


state 5

    (5) molecules -> molecule .
    (11) molecule -> molecule . countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    ARROW           reduce using rule 5 (molecules -> molecule .)
    PLUS            reduce using rule 5 (molecules -> molecule .)
    TEXNEWLINE      reduce using rule 5 (molecules -> molecule .)
    $end            reduce using rule 5 (molecules -> molecule .)
    ELEMENT         shift and go to state 8

    countedelement                 shift and go to state 12

state 6

    (6) molecules -> NUMBER . molecule
    (8) molecule -> . countedelement
    (11) molecule -> . molecule countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    ELEMENT         shift and go to state 8

    molecule                       shift and go to state 13
    countedelement                 shift and go to state 7

state 7

    (8) molecule -> countedelement .

    ELEMENT         reduce using rule 8 (molecule -> countedelement .)
    ARROW           reduce using rule 8 (molecule -> countedelement .)
    PLUS            reduce using rule 8 (molecule -> countedelement .)
    TEXNEWLINE      reduce using rule 8 (molecule -> countedelement .)
    $end            reduce using rule 8 (molecule -> countedelement .)


state 8

    (9) countedelement -> ELEMENT .
    (10) countedelement -> ELEMENT . atomcount
    (12) atomcount -> . SUBSCRIPT NUMBER
    (13) atomcount -> . SUBSCRIPT LBRACE NUMBER RBRACE

    ELEMENT         reduce using rule 9 (countedelement -> ELEMENT .)
    ARROW           reduce using rule 9 (countedelement -> ELEMENT .)
    PLUS            reduce using rule 9 (countedelement -> ELEMENT .)
    TEXNEWLINE      reduce using rule 9 (countedelement -> ELEMENT .)
    $end            reduce using rule 9 (countedelement -> ELEMENT .)
    SUBSCRIPT       shift and go to state 15

    atomcount                      shift and go to state 14

state 9

    (2) system -> system TEXNEWLINE . NEWLINE equation

    NEWLINE         shift and go to state 16


state 10

    (3) equation -> side ARROW . side
    (4) side -> . molecules
    (7) side -> . side PLUS molecules
    (5) molecules -> . molecule
    (6) molecules -> . NUMBER molecule
    (8) molecule -> . countedelement
    (11) molecule -> . molecule countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    NUMBER          shift and go to state 6
    ELEMENT         shift and go to state 8

    side                           shift and go to state 17
    molecules                      shift and go to state 4
    molecule                       shift and go to state 5
    countedelement                 shift and go to state 7

state 11

    (7) side -> side PLUS . molecules
    (5) molecules -> . molecule
    (6) molecules -> . NUMBER molecule
    (8) molecule -> . countedelement
    (11) molecule -> . molecule countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    NUMBER          shift and go to state 6
    ELEMENT         shift and go to state 8

    molecules                      shift and go to state 18
    molecule                       shift and go to state 5
    countedelement                 shift and go to state 7

state 12

    (11) molecule -> molecule countedelement .

    ELEMENT         reduce using rule 11 (molecule -> molecule countedelement .)
    ARROW           reduce using rule 11 (molecule -> molecule countedelement .)
    PLUS            reduce using rule 11 (molecule -> molecule countedelement .)
    TEXNEWLINE      reduce using rule 11 (molecule -> molecule countedelement .)
    $end            reduce using rule 11 (molecule -> molecule countedelement .)


state 13

    (6) molecules -> NUMBER molecule .
    (11) molecule -> molecule . countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    ARROW           reduce using rule 6 (molecules -> NUMBER molecule .)
    PLUS            reduce using rule 6 (molecules -> NUMBER molecule .)
    TEXNEWLINE      reduce using rule 6 (molecules -> NUMBER molecule .)
    $end            reduce using rule 6 (molecules -> NUMBER molecule .)
    ELEMENT         shift and go to state 8

    countedelement                 shift and go to state 12

state 14

    (10) countedelement -> ELEMENT atomcount .

    ELEMENT         reduce using rule 10 (countedelement -> ELEMENT atomcount .)
    ARROW           reduce using rule 10 (countedelement -> ELEMENT atomcount .)
    PLUS            reduce using rule 10 (countedelement -> ELEMENT atomcount .)
    TEXNEWLINE      reduce using rule 10 (countedelement -> ELEMENT atomcount .)
    $end            reduce using rule 10 (countedelement -> ELEMENT atomcount .)


state 15

    (12) atomcount -> SUBSCRIPT . NUMBER
    (13) atomcount -> SUBSCRIPT . LBRACE NUMBER RBRACE

    NUMBER          shift and go to state 19
    LBRACE          shift and go to state 20


state 16

    (2) system -> system TEXNEWLINE NEWLINE . equation
    (3) equation -> . side ARROW side
    (4) side -> . molecules
    (7) side -> . side PLUS molecules
    (5) molecules -> . molecule
    (6) molecules -> . NUMBER molecule
    (8) molecule -> . countedelement
    (11) molecule -> . molecule countedelement
    (9) countedelement -> . ELEMENT
    (10) countedelement -> . ELEMENT atomcount

    NUMBER          shift and go to state 6
    ELEMENT         shift and go to state 8

    equation                       shift and go to state 21
    side                           shift and go to state 3
    molecules                      shift and go to state 4
    molecule                       shift and go to state 5
    countedelement                 shift and go to state 7

state 17

    (3) equation -> side ARROW side .
    (7) side -> side . PLUS molecules

    TEXNEWLINE      reduce using rule 3 (equation -> side ARROW side .)
    $end            reduce using rule 3 (equation -> side ARROW side .)
    PLUS            shift and go to state 11


state 18

    (7) side -> side PLUS molecules .

    ARROW           reduce using rule 7 (side -> side PLUS molecules .)
    PLUS            reduce using rule 7 (side -> side PLUS molecules .)
    TEXNEWLINE      reduce using rule 7 (side -> side PLUS molecules .)
    $end            reduce using rule 7 (side -> side PLUS molecules .)


state 19

    (12) atomcount -> SUBSCRIPT NUMBER .

    ELEMENT         reduce using rule 12 (atomcount -> SUBSCRIPT NUMBER .)
    ARROW           reduce using rule 12 (atomcount -> SUBSCRIPT NUMBER .)
    PLUS            reduce using rule 12 (atomcount -> SUBSCRIPT NUMBER .)
    TEXNEWLINE      reduce using rule 12 (atomcount -> SUBSCRIPT NUMBER .)
    $end            reduce using rule 12 (atomcount -> SUBSCRIPT NUMBER .)


state 20

    (13) atomcount -> SUBSCRIPT LBRACE . NUMBER RBRACE

    NUMBER          shift and go to state 22


state 21

    (2) system -> system TEXNEWLINE NEWLINE equation .

    TEXNEWLINE      reduce using rule 2 (system -> system TEXNEWLINE NEWLINE equation .)
    $end            reduce using rule 2 (system -> system TEXNEWLINE NEWLINE equation .)


state 22

    (13) atomcount -> SUBSCRIPT LBRACE NUMBER . RBRACE

    RBRACE          shift and go to state 23


state 23

    (13) atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE .

    ELEMENT         reduce using rule 13 (atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE .)
    ARROW           reduce using rule 13 (atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE .)
    PLUS            reduce using rule 13 (atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE .)
    TEXNEWLINE      reduce using rule 13 (atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE .)
    $end            reduce using rule 13 (atomcount -> SUBSCRIPT LBRACE NUMBER RBRACE .)

